fix modal overflow bug; add effect toggle; add blob token env variable dependency;

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,10 @@ body {
         color 0.6s ease-out;
 }
 
+body.modal-mode {
+    overflow: hidden;
+}
+
 a {
     text-decoration: underline;
 }
